--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -181,13 +181,13 @@
                                 <div class="content">
                                     <h2><b>$1,000 for app & website</b></h2>
                                     <h2 class="h2-price"><b>$100 per month</b></h2>
-                                    <h3><b>$100 setup fee</b></h3>
+                                    <h3><b>$180 domain & hosting setup fee for website</b></h3>
                                     <h3>Development for custom mobile app and website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Mobile App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Unlimited updates made as needed to publish updated content.</h3>
-                                    <h3><b>$50 per year for hosting</b></h3><br>
+                                    <h3><b>$180 per year for hosting and domain renewal for website</b></h3>
                                     <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
@@ -245,13 +245,13 @@
                                 <div class="content">
                                     <h2><b>$600 for app & website</b></h2>
                                     <h2 class="h2-price"><b>$60 per month</b></h2>
-                                    <h3><b>$100 setup fee</b></h3>
+                                    <h3><b>$180 domain & hosting setup fee for website</b></h3>
                                     <h3>Development for custom mobile app and website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Mobile App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Unlimited updates made as needed to publish updated content.</h3>
-                                    <h3><b>$50 per year for hosting</b></h3><br>
+                                    <h3><b>$180 per year for hosting and domain renewal for website</b></h3>
                                     <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
