--- a/website-development.html
+++ b/website-development.html
@@ -151,10 +151,10 @@
                                 <div class="content">
                                     <h2><b>$500 per website</b></h2>
                                     <h2 class="h2-price"><b>$50 per month</b></h2>
-                                    <h3><b>$100 setup fee</b></h3>
+                                    <h3><b>$180 domain & hosting setup fee</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
                                     <h3>No page minimum or maximum!</h3>
-                                    <h3><b>$50 per year for hosting</b></h3><br>
+                                    <h3><b>$180 per year for hosting and domain renewal</b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://bit.ly/3hWVxjf" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -175,13 +175,13 @@
                                 <div class="content">
                                     <h2><b>$1,000 for app & website</b></h2>
                                     <h2 class="h2-price"><b>$100 per month</b></h2>
-                                    <h3><b>$100 setup fee</b></h3>
+                                    <h3><b>$180 domain & hosting setup fee</b></h3>
                                     <h3>Development for custom mobile app and website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Mobile App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Unlimited updates made as needed to publish updated content.</h3>
-                                    <h3><b>$50 per year for hosting</b></h3><br>
+                                    <h3><b>$180 per year for hosting and domain renewal</b></h3>
                                     <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
@@ -208,11 +208,10 @@
                                 <div class="content">
                                     <h2><b>$350 per website</b></h2>
                                     <h2 class="h2-price"><b>$35 per month</b></h2>
-                                    <h3><b>$100 setup fee!</b></h3>
-                                    <h3><b>No upfront costs!</b></h3>
+                                    <h3><b>$180 domain & hosting setup fee</b></h3>
                                     <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
                                     <h3>No page minimum or maximum!</h3>
-                                    <h3><b>$50 per year for hosting</b></h3><br>
+                                    <h3><b>$180 per year for hosting and domain renewal</b></h3><br>
                                     <div class="buttons is-centered">
                                         <a class="button info-button-blue" href="https://bit.ly/3XlQWr9" target="_blank"><b>Get Started!</b></a>
                                     </div>
@@ -233,13 +232,13 @@
                                 <div class="content">
                                     <h2><b>$600 for app & website</b></h2>
                                     <h2 class="h2-price"><b>$60 per month</b></h2>
-                                    <h3><b>$100 setup fee</b></h3>
+                                    <h3><b>$180 domain & hosting setup fee</b></h3>
                                     <h3>Development for custom mobile app and website</h3>
                                     <h3>Deployment to the Apple & Google app stores and online</h3>
                                     <h3>Same features as Mobile App Plan</h3>
                                     <h3>Same features as Website Development Plan</h3>
                                     <h3>Unlimited updates made as needed to publish updated content.</h3>
-                                    <h3><b>$50 per year for hosting</b></h3><br>
+                                    <h3><b>$180 per year for hosting and domain renewal</b></h3>
                                     <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
