--- a/contact.html
+++ b/contact.html
@@ -166,6 +166,7 @@
                                     </option>
                                     <option>Website Development
                                     </option>
+                                    <option>Custom Software</option>
                                     <option>Pricing Question(s)</option>
                                     <option>Privacy Policy Question(s)</option>
                                     <option>Affiliate Disclosure Question(s)</option>
