--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -143,7 +143,7 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC envisions a global impact from its products and services. We envision aiding churches, ministries, missionaries, and other religious non-profit organizations in communicating with their congregations better and reach people with the love of Christ. 
+                    Kingdom Application Solutions LLC envisions a global impact from its products and services. We envision aiding churches, ministries, missionaries, and other religious non-profit organizations in communicating with their congregations better and reach people with the love of Christ. We further envision aiding small businesses and organizations better reach their clients and increase their profit margins through well-made, designed, and developed mobile apps and websites.
                 </h2><br><hr>
                 <h1 class="title">
                     Our Values
