--- a/products.html
+++ b/products.html
@@ -133,7 +133,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Along with providing custom mobile app development and custom website development services, Kingdom Application Solutions LLC produces it's own line of software products. Currently, we have several mobile apps developed and deployed to the app stores. More software products are in development and will be released at a later time and reflected on this page.
+                    Along with providing custom mobile app development and custom website development services, Kingdom Application Solutions LLC produces it's own line of software products. Currently, we have several mobile apps developed and deployed to the app stores. More software products are in development and will be released at a later time and reflected on this page. We also develop custom software solutions for businesses as needed. Contact us for more information on custom software development for your business need!
                 </h2><br>
                 <p></p>
                 <h1 class="title">
