--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <img class="home-image" src="./images/header.webp" width="500" height="281" alt="Our logo">
                     </picture><br>
                     <h1 class="title white-text">
-                        Mobile App Development and Website Development for Churches and Ministries!
+                        Mobile App Development and Website Development!
                     </h1>
                 </div>    
             </div>     
@@ -138,7 +138,7 @@
                             Who We Are
                         </h2>
                         <h4 class="subtitle justify">
-                            We are a technology company that strives to glorify God through the creation and distribution of quality mobile apps and websites for churches, ministries, missionaries, and religious non-profit organizations. 
+                            We are a technology company that strives to glorify God through the creation and distribution of quality mobile apps and websites. Our primary focus is churches, ministries, missionaries, and religious non-profit organizations but work with organizations of all sizes. 
                         </h4>
                         <h4 class="subtitle">
                             Our core values are:
@@ -180,7 +180,7 @@
                             Mobile App Development
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer custom mobile app development for churches, ministries, missionaries, and religious non-profit organizations at an affordable price. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions for both ministry purposes and entertainment value. These apps cover a wide range of genres including ministry, missions, and some games. Most of our apps are free with subscription options for more features. Each of our mobile apps are custom and tailored to your church or ministry's needs. Our mobile apps are deployed to both the Google Play Store and the Apple App Store.
+                            We offer custom mobile app development primarily for churches, ministries, missionaries, and religious non-profit organizations at an affordable price as well as organizations of all sizes. Our goal is to bring mobile app development to those who otherwise would not be able to afford it. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps. <br><br> Along with mobile app development, we also develop and deploy our own app solutions for both ministry purposes and entertainment value. Most of our apps are free with subscription options for more features. Each of our mobile apps are custom and tailored to your organization's needs. Our mobile apps are deployed to both the Google Play Store and the Apple App Store.
                         </h4>
                         <a class="button info-button-brick" href="https://kingdomappsolutions.tech/mobile-app-development.html">
                         <b>About Mobile App Development</b>
@@ -198,7 +198,7 @@
                             Website Development
                         </h2>
                         <h4 class="subtitle justify">
-                            We offer website design and development for churches, ministries, missionaries/church planters, or religious non-profit organizations interested in having a quality-made website. We also offer the creation of websites through a content manangement option. Our website development service is a monthly charge that includes development, site maintenance, regular updates, and much more.
+                            We offer website design and development primarily to churches, ministries, missionaries/church planters, or religious non-profit organizations interested in having a quality-made website. Along with churches, we also cater to small businesses and organizations of any size. We offer the creation of websites through a content manangement option as well as more a more custom option if you desire. Our website development service is a monthly charge that includes development, site maintenance, SEO, regular updates, and much more.
                         </h4>
                         <a class="button info-button-blue" href="https://kingdomappsolutions.tech/website-development.html">
                             <b>About Website Development</b>
