Added custom pricing

--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -119,7 +119,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Mobile App Development for Your Church or Ministry!
+                        Mobile App Development for Your Organization!
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
@@ -133,11 +133,11 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to churches, ministries, missionaries, and religious non-profit organizations. Often mobile app development costs tens of thousands of dollars which churches cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
+                    Mobile app development is one of the chief services offered by Kingdom Application Solutions LLC. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our aim is to bring affordable mobile app development to churches, ministries, missionaries, religious non-profit organizations, and businesses of all sizes. Often mobile app development costs tens of thousands of dollars which smaller organizations cannot cover. Our pricing packages seek to bridge the gap between having no mobile app and the high-priced apps.
                 </h2><hr>
                 <p></p>
                 <h1 class="title">
-                    Pricing
+                    Church Pricing
                 </h1>
                 <div class="columns">
                     <div class="column">
@@ -162,7 +162,7 @@
                                     <h3>Custom branding and push notifications</h3>
                                     <h3>Unlimited updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3tNFFCz" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3U1hIlO" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -191,7 +191,7 @@
                                     <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-brick" href="https://bit.ly/3ESi5eb" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-brick" href="https://bit.ly/3OFGlUa" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -201,7 +201,7 @@
 
                 <p></p>
                 <h1 class="title">
-                    Special Missionary Pricing
+                    Missionary Pricing
                 </h1>
                 <div class="columns">
                     <div class="column">
@@ -226,7 +226,7 @@
                                     <h3>Custom branding and push notifications</h3>
                                     <h3>Unlimited updates made as needed to publish updated content</h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3AC9Dgp" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3VteUPC" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -255,7 +255,71 @@
                                     <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-brick" href="https://bit.ly/3go3Y6X" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-brick" href="https://bit.ly/3GLPdFx" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><hr>
+
+                <p></p>
+                <h1 class="title">
+                    Business/Non-Profit Pricing
+                </h1>
+                <div class="columns">
+                    <div class="column">
+                        <p></p>
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-brackets-curly"></i>&nbsp;
+                                    Mobile App Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$1,000 per app</b></h2>
+                                    <h2 class="h2-price"><b>$100 per month</b></h2>
+                                    <h3><b>No setup fee!</b></h3>
+                                    <h3>Development for custom mobile app</h3>
+                                    <h3>Deployment to both the Apple and Google app stores</h3>
+                                    <h3>Option for tab and/or side menu navigation</h3>
+                                    <h3>No page limit!</h3>
+                                    <h3>No limit for feature integrations!</h3>
+                                    <h3>Custom branding and push notifications</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content</h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-blue" href="https://bit.ly/3GNMWKk" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header-brick">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-star"></i>&nbsp;
+                                    App & Website Bundle
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$1,500 for app & website</b></h2>
+                                    <h2 class="h2-price"><b>$150 per month</b></h2>
+                                    <h3><b>$180 domain & hosting setup fee for website</b></h3>
+                                    <h3>Development for custom mobile app and website</h3>
+                                    <h3>Deployment to the Apple & Google app stores and online</h3>
+                                    <h3>Same features as Mobile App Plan</h3>
+                                    <h3>Same features as Website Development Plan</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content.</h3>
+                                    <h3><b>$180 per year for hosting and domain renewal for website</b></h3>
+                                    <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
+                                    <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-brick" href="https://bit.ly/3AJZtue" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
