--- a/website-development.html
+++ b/website-development.html
@@ -119,7 +119,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Website Development for Your Church or Ministry!
+                        Website Development for Your Organization!
                     </h1>
                     <picture>
                         <source srcset="./images/header.webp" type="images/webp">
@@ -133,10 +133,10 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Website design & development is one of the foundational services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out your church, mission, or religious non-profit organization so it is a vital piece of any ministry's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for a ministry's web presence. A well-made website illustrates to others that you do things with excellence and take the cause of Christ seriously.
+                    Website design & development is one of the foundational services Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out your church, mission, religious non-profit organization, or business so it is a vital piece of any organization's marketing and outreach plan. Websites should look nice not only on a computer, but also on mobile phones. We develop "mobile-first" knowing that many people will use their mobile devices when searching for your web presence. A well-made website illustrates to others that you do things with excellence and builds confidence in your organization. <br><br> Below you can see our pricing plans for churches, missionaries, and non-profit/business organizations. Contact us on our contact page to get more information regarding pricing or custom built websites.
                 </h2><hr>
                 <h1 class="title">
-                    Pricing
+                    Church Pricing
                 </h1>
                 <div class="columns">
                     <div class="column">
@@ -156,7 +156,7 @@
                                     <h3>No page minimum or maximum!</h3>
                                     <h3><b>$180 per year for hosting and domain renewal</b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3hWVxjf" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3U5JMVe" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -185,7 +185,33 @@
                                     <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-brick" href="https://bit.ly/3ESi5eb" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-brick" href="https://bit.ly/3OFGlUa" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-code"></i>&nbsp;
+                                    Custom Website Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$50 per hour</b></h2>
+                                    <h2 class="h2-price"><b>$75 per month</b></h2>
+                                    <h3><b>8 hours per page minimum</b></h3>
+                                    <h3><b>First 4 hours down payment</b></h3>
+                                    <h3><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3>No page minimum or maximum!</h3>
+                                    <h3><b>$50 per year for hosting renewal</b></h3>
+                                    <h3><b><i>BEST VALUE FOR CUSTOM WEBSITE SOLUTION!</i></b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-blue" href="https://bit.ly/3Va7BMI" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -193,7 +219,7 @@
                     </div>
                 </div><hr>
                 <h1 class="title">
-                    Special Missionary Pricing
+                    Missionary Pricing
                 </h1>
                 <div class="columns">
                     <div class="column">
@@ -213,7 +239,7 @@
                                     <h3>No page minimum or maximum!</h3>
                                     <h3><b>$180 per year for hosting and domain renewal</b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-blue" href="https://bit.ly/3XlQWr9" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-blue" href="https://bit.ly/3XyB3xB" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
@@ -242,7 +268,115 @@
                                     <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
                                     <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
                                     <div class="buttons is-centered">
-                                        <a class="button info-button-brick" href="https://bit.ly/3go3Y6X" target="_blank"><b>Get Started!</b></a>
+                                        <a class="button info-button-brick" href="https://bit.ly/3GLPdFx" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-code"></i>&nbsp;
+                                    Custom Website Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$50 per hour</b></h2>
+                                    <h2 class="h2-price"><b>$50 per month</b></h2>
+                                    <h3><b>8 hours per page minimum</b></h3>
+                                    <h3><b>First 4 hours down payment</b></h3>
+                                    <h3><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3>No page minimum or maximum!</h3>
+                                    <h3><b>$50 per year for hosting renewal</b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-blue" href="https://bit.ly/3GPNnDJ" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><hr>
+
+                <h1 class="title">
+                    Business/Non-Profit Pricing
+                </h1>
+                <div class="columns">
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-code"></i>&nbsp;
+                                    Website Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$750 per website</b></h2>
+                                    <h2 class="h2-price"><b>$75 per month</b></h2>
+                                    <h3><b>$180 domain & hosting setup fee</b></h3>
+                                    <h3><b>Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3>No page minimum or maximum!</h3>
+                                    <h3><b>$180 per year for hosting and domain renewal</b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-blue" href="https://bit.ly/3u162VK" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header-brick">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-star"></i>&nbsp;
+                                    App & Website Bundle
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$1,500 for app & website</b></h2>
+                                    <h2 class="h2-price"><b>$150 per month</b></h2>
+                                    <h3><b>$180 domain & hosting setup fee</b></h3>
+                                    <h3>Development for custom mobile app and website</h3>
+                                    <h3>Deployment to the Apple & Google app stores and online</h3>
+                                    <h3>Same features as Mobile App Plan</h3>
+                                    <h3>Same features as Website Development Plan</h3>
+                                    <h3>Unlimited updates made as needed to publish updated content.</h3>
+                                    <h3><b>$180 per year for hosting and domain renewal</b></h3>
+                                    <h3><b><i>SAVE $25 PER MONTH!</i></b></h3>
+                                    <h3><b><i>BEST VALUE FOR COMPLETE SOLUTION!</i></b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-brick" href="https://bit.ly/3AJZtue" target="_blank"><b>Get Started!</b></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column">
+                        <div class="card">
+                            <header class="card-header">
+                                <p class="card-header-title is-centered">
+                                    <i class="fa-solid fa-code"></i>&nbsp;
+                                    Custom Website Development
+                                </p>
+                            </header>
+                            <div class="card-content">
+                                <div class="content">
+                                    <h2><b>$50 per hour</b></h2>
+                                    <h2 class="h2-price"><b>$100 per month</b></h2>
+                                    <h3><b>8 hours per page minimum</b></h3>
+                                    <h3><b>First 4 hours down payment</b></h3>
+                                    <h3><b>Custom Website Development, Graphic Design, Search Engine Optimization, Increased Performance, Domain Setup, Hosting Setup, & Unlimited Updates</b></h3>
+                                    <h3>No page minimum or maximum!</h3>
+                                    <h3><b>$50 per year for hosting renewal</b></h3><br>
+                                    <div class="buttons is-centered">
+                                        <a class="button info-button-blue" href="https://bit.ly/3gxEVOX" target="_blank"><b>Get Started!</b></a>
                                     </div>
                                 </div>
                             </div>
