--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <img class="home-image" src="./images/header.webp" width="500" height="281" alt="Our logo">
                     </picture><br>
                     <h1 class="title white-text">
-                        Mobile App Development and Website Development!
+                        Mobile App Development and Website Development
                     </h1>
                 </div>    
             </div>     
